# 3d

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README  README.md  _build_release.ps1  _inspect.ps1  rust-toolchain.toml  rustfmt.toml  setup.ps1
.github/workflows/: ci.yml  linux.yml  mac.yml  windows.yml
denoiser/: Cargo.toml  build.rs
denoiser/lib/mac_arm/: libOpenImageDenoise_device_cpu.2.3.3.dylib
denoiser/src/: buffer.rs  buffer_io_tests.rs  device.rs  error.rs  filter.rs  lib.rs
denoiser/tests/: buffer_io_tests.rs
sandbox/: Cargo.toml  _inspect.ps1  build.rs
sandbox/src/: beautiful_world.rs  main.rs  sandbox.rs  tech_world.rs  texture_2d_filtered_deformed_circles.wgsl  texture_2d_lava_like.wgsl  texture_2d_water_like.wgsl  world.rs
