[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
winit = "0.30.12"
pollster = "0.4"
cgmath = "0.18.0"
anyhow = "1.0.98"
env_logger = "0.11.8"
image = { version = "0.25.6", features = ["png"] }

library = { path = "../library", features = [] }

[build-dependencies]
fs_extra = "1.3.0"

[lints.clippy]
option_map_unit_fn = "allow"
redundant_closure = "allow"
